--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
-# API Configuration
-REACT_APP_API_URL=http://localhost:5000/api
+# API Configuration - PRODUCTION
+REACT_APP_API_URL=https://testcrack-backend-production.up.railway.app/api
 
 # App Configuration
 REACT_APP_NAME=Test Crack
 REACT_APP_VERSION=1.0.0
 
-# For production, change to your deployed backend URL:
-# REACT_APP_API_URL=https://your-backend-url.railway.app/api
+# Development API URL (commented out for production)
+# REACT_APP_API_URL=http://localhost:5000/api
+
+# For local development, uncomment the line above and comment the production URL
